# qrcode-artistic

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Dockerfile.backend  Dockerfile.frontend  deploy.sh  docker-compose.yml  flake.nix  next.config.mjs  package.json  plan.md  pnpm-lock.yaml  pyproject.toml  requirements.txt  vercel.json
.claude/: settings.local.json
.github/workflows/: deploy.yml  health-check.yml
app/: globals.css  layout.tsx  page.tsx
app/api/generate-qr/: index.py
backend/: main.py  pyproject.toml  requirements.txt
components/: PixelQrGenerator.tsx
hooks/: use-pyodide.ts
lib/pyodide/: config.ts  loader.ts  types.ts
public/: site.webmanifest  test-wasm.html
public/wasm/: qr_wasm.py
wasm/: README.md  pyproject.toml
wasm/src/: __init__.py  qr_generator.py
