[project]
name = "gen-qr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "legacy-cgi>=2.6.3",
    "pillow>=12.0.0",
    "python-multipart>=0.0.20",
    "qrcode-artistic>=3.0.2",
    "segno>=1.6.6",
    "uvicorn>=0.38.0",
]
