[project]
name = "qrcode-artistic-backend"
version = "0.1.0"
description = "QR code artistic generator API built with FastAPI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.119.1",
    "python-multipart>=0.0.20",
    "qrcode-artistic>=3.0.2",
    "requests>=2.32.5",
    "segno>=1.6.6",
    "uvicorn[standard]>=0.38.0",
]
