[project]
name = "qrcode-wasm"
version = "0.1.0"
description = "QR code generation module for WebAssembly/Pyodide - matches backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "segno>=1.6.6",
    "qrcode-artistic>=3.0.2",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pyright>=1.1.0",
]

[tool.pyright]
include = ["."]
exclude = ["**/__pycache__", ".venv"]
